unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source__c/zkmulti__MCCustom_Address_Source__c.object-meta.xml
<CustomObject>
    <label>Custom Address Source</label>
    <nameField>
        <label>Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>