unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Auto_Create_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Auto_Create_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Shipment</label>
    <type>Checkbox</type>
</CustomField>