unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Auto_Print__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Auto_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Print</label>
    <type>Checkbox</type>
</CustomField>