unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Child_Customs_Item_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Child_Customs_Item_Parent_Field__c</fullName>
    <label>Child Customs Item Parent Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>