unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Custom_Address_Source__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Custom_Address_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Address Source (Return Shipment)</label>
    <referenceTo>zkmulti__MCCustom_Address_Source__c</referenceTo>
    <relationshipLabel>Custom Address Sources</relationshipLabel>
    <relationshipName>Custom_Address_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>