unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__Is_Fastest__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Is_Fastest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fastest</label>
    <type>Checkbox</type>
</CustomField>