unpackaged/main/default/objects/zkmulti__MCCustom_Address_Source__c/fields/zkmulti__PackageBoxingAlgorithm__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PackageBoxingAlgorithm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Boxing Algorithm</label>
    <type>Checkbox</type>
</CustomField>